spinner css edit

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1756,27 +1756,28 @@ input, select, textarea {
 		display: flex;
 		align-items: center;
 		justify-content: center;
-	}
-	
-	.spinner {
-		border: 16px solid #f3f3f3;
-		border-radius: 50%;
-		border-top: 16px solid #3498db;
-		width: 120px;
-		height: 120px;
-		-webkit-animation: spin 2s linear infinite; /* Safari */
-		animation: spin 2s linear infinite;
-	}
-	
-	/* Safari */
-	@-webkit-keyframes spin {
-		0% { -webkit-transform: rotate(0deg); }
-		100% { -webkit-transform: rotate(360deg); }
+		transform: translate(-50%, -50%); /* Center the loader */
 	}
 	
 	@keyframes spin {
 		0% { transform: rotate(0deg); }
 		100% { transform: rotate(360deg); }
+	}
+
+	/* Safari */
+	@-webkit-keyframes spin {
+		0% { -webkit-transform: rotate(0deg); }
+		100% { -webkit-transform: rotate(360deg); }
+	}
+
+	.spinner {
+		border: 12px solid #f3f3f3;
+		border-radius: 50%;
+		border-top: 12px solid #3498db;
+		width: 120px;
+		height: 120px;
+		animation: spin 0.5s linear infinite;
+		-webkit-animation: spin 0.5s linear infinite; /* Safari */
 	}
 
 /* Sections/Article */
@@ -2922,28 +2923,29 @@ input, select, textarea {
 			display: flex;
 			align-items: center;
 			justify-content: center;
+			transform: translate(-50%, -50%); /* Center the loader */
 		  }
-		  
-		  .spinner {
-			border: 16px solid #f3f3f3;
-			border-radius: 50%;
-			border-top: 16px solid #3498db;
-			width: 120px;
-			height: 120px;
-			-webkit-animation: spin 2s linear infinite; /* Safari */
-			animation: spin 2s linear infinite;
-		  }
+
+		  @keyframes spin {
+			0% { transform: rotate(0deg); }
+			100% { transform: rotate(360deg); }
+		}
 		
 		/* Safari */
 		@-webkit-keyframes spin {
 			0% { -webkit-transform: rotate(0deg); }
 			100% { -webkit-transform: rotate(360deg); }
 		}
-		
-		@keyframes spin {
-			0% { transform: rotate(0deg); }
-			100% { transform: rotate(360deg); }
-		}
+
+		.spinner {
+			border: 12px solid #f3f3f3;
+			border-radius: 50%;
+			border-top: 12px solid #3498db;
+			width: 120px;
+			height: 120px;
+			animation: spin 0.5s linear infinite;
+			-webkit-animation: spin 0.5s linear infinite; /* Safari */
+		  }
 
 		/* Actions */
 
